# GAction

./: .coverage  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: deploy_pages.yml  deployment.yml  dev_deployment.yml  dev_deploymeny.yml  docker-image.yml  main_deployment.yml  memory_test.yml  test.yml  test_deployment.yml  unit_test.yml
config/: conf.py_t  keep_documentation.py
docs/: conf.py  index.rst  modules.rst  src.rst
docs/source/: conf.py  index.rst
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_constants_py.html  z_145eef247bfb46b6_helper_py.html  z_a23d7a367f1d4467___init___py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_test_helper_py.html  z_aee55b7cdf71401b___init___py.html  z_aee55b7cdf71401b_test_preprocess_helper_py.html  z_b7e0303e310b77d6___init___py.html  z_b7e0303e310b77d6_test_andrea_preprocessing_py.html  z_b7e0303e310b77d6_test_borislav_preprocessing_py.html  z_dd52281f56f5d51f_borislav_preprocessing_py.html  z_f1b38b22aeb65474___init___py.html  z_f1b38b22aeb65474_preprocess_helper_py.html
src/: README.md  __init__.py  constants.py  helper.py  index.rst  main.py
src/model/: LR_evaluation.ipynb  LR_model_with_interactions.ipynb  LR_model_with_interactions.py  README.md  RF_evaluation.ipynb  RF_model.ipynb  RF_model.py  andrea_preprocessing.py  borislav_preprocessing.py
src/utils/: README.md  (+2 more)
temp/: Notebook_Valerian.ipynb  merging_plants.ipynb
tests/: __init__.py  test_helper.py
(+132 files in other folders)
